--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@
 
 .main {
   display: grid;
-  width: 90%;
+  margin: 0 auto;
+  width: 1600px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(7, 23vw);
+  grid-template-rows: repeat(7, 350px);
   grid-gap: 20px;
 }
 
@@ -39,6 +40,35 @@
 
 .main__item-horizontal {
   grid-column-end: span 2;
+}
+
+.main__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding-left: 2rem;
+}
+
+.main__item-tags {
+  display: flex;
+  align-items: center;
+}
+
+.main__item-large .main__item-title {
+  font-size: 3rem;
+  margin: 1rem 0;
+}
+
+.main__item-tag {
+  margin-right: 1rem;
+}
+
+@media screen and (max-width: 1600px) {
+  .main {
+    width: 100%;
+    grid-template-rows: repeat(7, 23vw);
+  }
 }
 
 @media screen and (max-width: 992px) {
