--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/* GENERAL */
+body {
+  margin: 0;
+}
+
+* {
+  font-family: 'Bebas Neue', cursive;
+  letter-spacing: 1px;
+}
+
 /* START NAV  */
 
 /* END NAV */
@@ -7,26 +17,9 @@
 /* END HEADER */
 
 /* START MAIN  */
-.red {
-  background-color: red;
-  grid-column-end: span 2;
-}
-
-.blue {
-  background-color: blue;
-}
-
-.yellow {
-  background-color: yellow;
-}
-
-.green {
-  background-color: green;
-}
-
 .main {
   display: grid;
-  margin: 0 auto;
+  margin: 2rem auto;
   width: 1600px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(7, 350px);
@@ -47,7 +40,23 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
-  padding-left: 2rem;
+  padding-left: 1rem;
+  transition: all 0.5s ease;
+}
+
+.main__item:hover {
+  cursor: pointer;
+  filter: grayscale(80%);
+}
+
+.main__item-placeholder:hover {
+  cursor: default;
+}
+
+.main__item-title {
+  border-radius: 5px;
+  background-color: #fff04e;
+  padding: 0.5rem 1rem;
 }
 
 .main__item-tags {
@@ -62,6 +71,11 @@
 
 .main__item-tag {
   margin-right: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #023255;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 1600px) {
@@ -87,6 +101,7 @@
   .main {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(9, 100vw);
+    grid-gap: 10px;
   }
 
   .main__item-placeholder {
@@ -97,9 +112,96 @@
     grid-column-end: span 1;
     grid-row-end: span 1;
   }
+
+  .main__item-large .main__item-title,
+  .main__item-title {
+    font-size: 2rem;
+  }
+
+  .main__item-tags {
+    display: none;
+  }
+}
+
+#article-1 {
+  background-image: url('./assets/article-1.jpg');
+  background-size: cover;
+}
+
+#article-2 {
+  background-image: url('./assets/article-2.jpg');
+  background-size: cover;
+}
+
+#article-3 {
+  background-image: url('./assets/article-3.jpg');
+  background-size: cover;
+}
+
+#article-4 {
+  background-image: url('./assets/article-4.jpg');
+  background-size: cover;
+}
+
+#article-5 {
+  background-image: url('./assets/article-5.jpg');
+  background-size: cover;
+}
+
+#article-6 {
+  background-image: url('./assets/article-6.jpg');
+  background-size: cover;
+}
+
+#article-7 {
+  background-image: url('./assets/article-7.jpg');
+  background-size: cover;
+}
+
+#article-8 {
+  background-image: url('./assets/article-8.jpg');
+  background-size: cover;
+}
+
+#article-9 {
+  background-image: url('./assets/article-9.jpg');
+  background-size: cover;
 }
 /* END MAIN */
 
 /* START FOOTER  */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #303030;
+  min-height: 200px;
+}
 
+.footer__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  width: 80%;
+  justify-content: space-around;
+}
+
+.footer__list-item a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer__list-item a:hover {
+  color: #fff04e;
+}
+
+@media screen and (max-width: 400px) {
+  .footer__list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 180px;
+  }
+}
 /* END FOOTER */
