--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
   height: 85vh;
   width: 100%;
   z-index: -1;
+  box-shadow: inset 0px 0px 30px 30px rgba(0,0,0,0.5);
 }
 
 /* END HEADER */
@@ -78,6 +79,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(7, 350px);
   grid-gap: 20px;
+  box-shadow: 0px 0px 30px 30px rgba(0,0,0,0.5);
 }
 
 .main__item-large {
