--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body {
 .main__wrapper {
   width: 100%;
   background-color: #fff;
+  box-shadow: 0px -40px 40px rgba(0, 0, 0, 0.5);
 }
 
 .main {
@@ -89,7 +90,6 @@ body {
   grid-template-rows: repeat(7, 350px);
   grid-gap: 20px;
   padding: 2rem 0;
-  box-shadow: 0px 0px 30px 30px rgba(0, 0, 0, 0.5);
 }
 
 .main__item-large {
