--- a/style.css
+++ b/style.css
@@ -11,40 +11,48 @@ body {
 /* START NAV  */
 .navbar-row {
     display: flex;
+    top: 0px;
+    position: sticky;
     flex-direction: row;
     width: 100%;
+    background-color: #40649e98;
+    height: 120px;
 }
 
-.column {
-    height: 90px;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
+.column{
+    background-color: #40649e98;
+
 }
 
-.left{
-    background-color: red;
+ul{
+    list-style-type: none;
 }
 
-.right{
-    background-color: blue;
+.image-logo{
+    height: 120px;
+    top: 70px;
 }
- .middle{
-     background-color: yellow;
- }
 
-
-span{
+.logo{
+    position: absolute;
+    left: 50%;
+    top: 0;
+    bottom: 0px;
+    display: inline-block;
+    transform: translatex(-80px);
+}
+ 
+.social-navbar{
     display: flex;
-    align-items: center;
-    height: 90px;
-    justify-content: center;
+    position: absolute;
+    right: 0;
+    top: 15%;
+    margin: 10px;
+    padding: 10px;
+    bottom: 0;
+    width: 120px;
+    justify-content: space-between;
 }
-
-
-
-
-
 
 
 
