--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .navbar-row {
     display: flex;
     top: 0px;
-    position: sticky;
+    position: relative;
     flex-direction: row;
     width: 100%;
     background-color: #40649e98;
