--- a/article/article.css
+++ b/article/article.css
@@ -12,11 +12,11 @@ body {
 .navbar-row {
     display: flex;
     top: 0px;
-    position: sticky;
+    position: relative;
     flex-direction: row;
     width: 100%;
     background-color: #40649e98;
-    height: 120px;
+    height: 100px;
 }
 
 .column{
@@ -42,7 +42,7 @@ ul{
     transform: translatex(-80px);
 }
  
-.social-navbar{
+.navbar-nav{
     display: flex;
     position: absolute;
     right: 0;
