--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,12 +1,12 @@
 /* START NAV  */
-.navbar-row {
+.navbar{
   display: flex;
   top: 0px;
-  position: sticky;
+  position: relative;
   flex-direction: row;
   width: 100%;
   background-color: #40649e98;
-  height: 120px;
+  height: 100px;
 }
 
 .column {
@@ -18,7 +18,7 @@ ul {
 }
 
 .image-logo {
-  height: 120px;
+  height: 100px;
   top: 70px;
 }
 
@@ -31,7 +31,7 @@ ul {
   transform: translatex(-80px);
 }
 
-.social-navbar {
+.navbar-nav {
   display: flex;
   position: absolute;
   right: 0;
