--- a/style.css
+++ b/style.css
@@ -283,11 +283,8 @@ ul {
 
 /* START FOOTER  */
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #303030;
-  min-height: 200px;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 0.5rem 0;
 }
 
 .footer__list {
@@ -295,12 +292,12 @@ ul {
   margin: 0;
   list-style: none;
   display: flex;
-  width: 80%;
-  justify-content: space-around;
+  width: 100%;
 }
 
 .footer__list-item a {
   text-decoration: none;
+  margin: 0 1rem;
   color: #fff;
 }
 
@@ -313,7 +310,7 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 180px;
+    height: 150px;
   }
 }
 /* END FOOTER */
