--- a/style.css
+++ b/style.css
@@ -166,7 +166,6 @@ ul {
 }
 
 .main__item-title {
-  border-radius: 5px;
   background-color: #fff04e;
   padding: 0.5rem 1rem;
 }
@@ -177,17 +176,17 @@ ul {
 }
 
 .main__item-large .main__item-title {
-  font-size: 3rem;
-  margin: 1rem 0;
+  font-size: 2rem;
+  margin: 0.5rem 0;
 }
 
 .main__item-tag {
   margin-right: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   background-color: #023255;
   color: #fff;
   font-weight: 300;
-  border-radius: 5px;
+  font-size: 1rem;
 }
 
 @media screen and (max-width: 1600px) {
@@ -227,7 +226,7 @@ ul {
 
   .main__item-large .main__item-title,
   .main__item-title {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .main__item-tags {
