--- a/article/article.css
+++ b/article/article.css
@@ -64,33 +64,57 @@ ul {
 .hero-image {
   width: 100%;
   max-width: none;
-  height: auto;
+  height: 61vh;
 }
 
 /* END HEADER */
 
 /* START ARTICLE */
 .main__item-title {
-  border-radius: 5px;
+  /* border-radius: 5px; */
   background-color: #fff04e;
   padding: 0.5rem 1rem;
 }
 p {
   font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  margin: 60px 0px 60px 0px;
 }
 
 /* END ARTICLE */
+/* SOCIAL NET BUTTONS START */
+.social{
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+}
+.social__buttons{
+  position: relative;
+  list-style: none;
+  margin: 0 20px;
+  cursor: pointer;
+}
+
+/* SOCIAL NET BUTTONS END */
 /* START NEWSLETTER */
+.form{
+  display: flex;
+  justify-content: center;
+  margin-top: 4rem;
+}
 form {
   border: 3px solid #f1f1f1;
   border-radius: 5px;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
+  width: 75%;
+
 }
 .h2__color {
   color: #fff04e;
+  text-justify: center;
 }
 .form__container {
-  padding: 20px;
+  padding: 10px;
   background-color: #023255;
   border-radius: 5px;
 }
@@ -98,8 +122,8 @@ form {
 input[type='text'],
 input[type='submit'] {
   width: 100%;
-  padding: 12px;
-  margin: 8px 0;
+  padding: 7px;
+  margin: 6px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
