--- a/style.css
+++ b/style.css
@@ -10,13 +10,17 @@ body {
 
 /* START NAV  */
 
+
+
+        
+  
 .navbar {
   display: flex;
   top: 0px;
   position: relative;
   flex-direction: row;
   width: 100%;
-  background-color: #40649e98;
+  background-color: #030914be;
   height: 100px;
   z-index: 999;
 }
@@ -26,8 +30,9 @@ ul {
 }
 
 .image-logo {
+  display: none;
   height: 120px;
-  top: 70px;
+  top: 50px;
 }
 
 .logo {
@@ -42,14 +47,15 @@ ul {
 .navbar-nav {
   display: flex;
   position: absolute;
-  right: 0;
-  top: 15%;
-  margin: 10px;
-  padding: 10px;
+  right: 80px;
+  top: 27%;
+  margin: 5px;
+  padding: 5px;
   bottom: 0;
   width: 120px;
   justify-content: space-between;
 }
+
 
 /* END NAV */
 
@@ -317,3 +323,46 @@ ul {
   }
 }
 /* END FOOTER */
+
+
+
+
+@media screen and (max-width: 1600px) {
+  .navbar-image{
+    height: 30px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .navbar-image{
+    height: 28px;
+ }
+
+ .navbar-nav{
+   width: 90px;
+ }
+
+}      
+
+
+@media screen and (max-width: 400px) {
+  .navbar-nav{
+    right: 10px;
+    top: 15%;
+    width: 70px;
+    padding: 10px;
+    margin: 15px;
+  }
+  .navbar-image{
+    height: 20px;
+    }
+  .logo{
+    left: 60px;
+    top: 5%;
+    height: 20px;
+  }
+  .image-logo{
+    height: 100px;
+  }  
+}
+  
