--- a/article/article.css
+++ b/article/article.css
@@ -104,7 +104,7 @@ p {
 }
 form {
   border: 3px solid #f1f1f1;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   margin-bottom: 3rem;
   width: 75%;
 
@@ -116,7 +116,7 @@ form {
 .form__container {
   padding: 10px;
   background-color: #023255;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 input[type='text'],
@@ -127,7 +127,7 @@ input[type='submit'] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 input[type='checkbox'] {
@@ -137,7 +137,7 @@ input[type='submit'] {
   background-color: #fff04e;
   color: #023255;
   border: none;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 input[type='submit']:hover {
