--- a/article/article.css
+++ b/article/article.css
@@ -66,6 +66,12 @@ ul {
   max-width: none;
   height: 61vh;
 }
+@media screen and (max-width: 790px) {
+  .hero-image {
+    width: 100%;
+    height: auto;
+  }
+}
 
 /* END HEADER */
 
@@ -143,6 +149,11 @@ input[type='submit'] {
 
 input[type='submit']:hover {
   opacity: 0.8;
+}
+@media screen and (max-width: 790px) {
+  form{
+    width: 100%;
+  }
 }
 
 /* END NEWSLETTER */
