--- a/article/article.css
+++ b/article/article.css
@@ -42,10 +42,10 @@ ul {
 .navbar-nav {
   display: flex;
   position: absolute;
-  right: 60;
-  top: 15%;
-  margin: px;
-  padding: 10px;
+  right: 40px;
+  top: 27%;
+  margin: 5px;
+  padding: 5px;
   bottom: 0;
   width: 120px;
   justify-content: space-between;
@@ -157,9 +157,11 @@ input[type='submit']:hover {
  }
 
  .navbar-nav{
-   width: 90px;
+   width: 100px;
  }
-
+.logo{
+  left: 15%;
+}
 }      
 
 
