--- a/article/article.css
+++ b/article/article.css
@@ -88,14 +88,21 @@ p {
   margin: 60px 0px 60px 0px;
 }
 
+.article__text-first-letter {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #023255;
+  margin-right: 15px;
+}
+
 /* END ARTICLE */
 /* SOCIAL NET BUTTONS START */
-.social{
+.social {
   position: relative;
   display: flex;
   justify-content: flex-end;
 }
-.social__buttons{
+.social__buttons {
   position: relative;
   list-style: none;
   margin: 0 20px;
@@ -104,7 +111,7 @@ p {
 
 /* SOCIAL NET BUTTONS END */
 /* START NEWSLETTER */
-.form{
+.form {
   display: flex;
   justify-content: center;
   margin-top: 4rem;
@@ -114,7 +121,6 @@ form {
   /* border-radius: 5px; */
   margin-bottom: 3rem;
   width: 75%;
-
 }
 .h2__color {
   color: #fff04e;
@@ -151,50 +157,48 @@ input[type='submit']:hover {
   opacity: 0.8;
 }
 @media screen and (max-width: 790px) {
-  form{
+  form {
     width: 100%;
   }
 }
 
 /* END NEWSLETTER */
 @media screen and (max-width: 1600px) {
-  .navbar-image{
+  .navbar-image {
     height: 30px;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .navbar-image{
+  .navbar-image {
     height: 28px;
- }
+  }
 
- .navbar-nav{
-   width: 100px;
- }
-.logo{
-  left: 15%;
+  .navbar-nav {
+    width: 100px;
+  }
+  .logo {
+    left: 15%;
+  }
 }
-}      
-
 
 @media screen and (max-width: 400px) {
-  .navbar-nav{
+  .navbar-nav {
     right: 10px;
     top: 15%;
     width: 70px;
     padding: 10px;
     margin: 15px;
   }
-  .navbar-image{
+  .navbar-image {
     height: 20px;
-    }
-  .logo{
+  }
+  .logo {
     left: 60px;
     top: 5%;
     height: 20px;
   }
-  .image-logo{
+  .image-logo {
     height: 100px;
-  }  
+  }
 }
-  
