--- a/article/article.css
+++ b/article/article.css
@@ -98,7 +98,7 @@ ul {
 p {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
-  text-indent: 2em;
+  text-indent: 1rem;
   margin: 30px 0px 60px 0px;
 }
 @media screen and (max-width: 320px) {
@@ -114,7 +114,7 @@ p {
   font-size: 4rem;
   font-weight: bold;
   color: #023255;
-  margin-right: 15px;
+  margin-right: 1rem;
 }
 
 /* END ARTICLE */
