--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
   z-index: 999;
 }
 
+.navbar-enter {
+  animation: slide-down 1s linear 1 forwards;
+}
+
 ul {
   list-style-type: none;
 }
@@ -53,6 +57,14 @@ ul {
   scroll-behavior: smooth;
 }
 
+@keyframes slide-down {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 
 /* END NAV */
 
@@ -78,7 +90,7 @@ ul {
   height: 80%;
   object-fit: contain;
 }
-.header__title{
+.header__title {
   margin: 0 auto;
   width: 1600px;
 }
@@ -324,49 +336,44 @@ ul {
 }
 /* END FOOTER */
 
-
-
-
 @media screen and (max-width: 1600px) {
-  .navbar-image{
+  .navbar-image {
     height: 30px;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .navbar-image{
+  .navbar-image {
     height: 28px;
- }
+  }
 
- .logo{
-   left: 60px;
- }
+  .logo {
+    left: 60px;
+  }
 
- .navbar-nav{
-   width: 90px;
- }
-}      
-
+  .navbar-nav {
+    width: 90px;
+  }
+}
 
 @media screen and (max-width: 400px) {
-  .navbar-nav{
+  .navbar-nav {
     right: 5px;
     top: 15%;
     width: 70px;
     padding: 10px;
     margin: 15px;
   }
-  .navbar-image{
+  .navbar-image {
     height: 25px;
-    }
-  .logo{
+  }
+  .logo {
     display: block;
     left: 60px;
     top: 5%;
     height: 20px;
   }
-  .image-logo{
+  .image-logo {
     height: 100px;
-  }  
+  }
 }
-  
