--- a/article/article.css
+++ b/article/article.css
@@ -1,6 +1,7 @@
 /* GENERAL */
 body {
   margin: 0;
+  margin-top: 100px;
 }
 
 * {
@@ -54,6 +55,10 @@ ul {
 /* END NAV */
 
 /* START HEADER */
+/* .header__marginTop{
+  margin-top: 100px;
+} */
+
 .main__wrapper {
   margin-right: auto;
   margin-left: auto;
